--- a/02_prime_prover/Scarb.toml
+++ b/02_prime_prover/Scarb.toml
@@ -9,6 +9,8 @@ enable-gas = false
 [dependencies]
 cairo_execute = "2.11.4"
 
+[dev-dependencies]
+cairo_test = "2.11.4"
 
 [[target.executable]]
 name = "main"
